first commit lmao >:D

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>My First Steps In Git</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/logo.jpg" />
 </head>
 <body>
-    
+    <header class="header">
+        <img src="./images/logo.jpg" alt="Логотип Хекслета" class="header-logo">
+        <div class="header-container">
+            <h1 class="header-header">Михаил Махария</h1>
+            <p class="header-subheader">1105o</p>
+        </div>
+    </header>
+    <main class="main">
+        <article class="main-hobby">
+            <div class="main-hobby-header">
+                <div class="main-hobby-header-light one"></div>
+                <div class="main-hobby-header-light two"></div>
+                <div class="main-hobby-header-light three"></div>
+                <h1 class="main-hobby-header-text">Гейминг</h1>
+            </div>
+            <div class="main-hobby-contents">
+                <p class="main-hobby-contents-text">Играю во всякие игрулины, но играю плохо. У меня медленная реакция и ужасное зрение. Ну я хотя-бы стараюсь. >:D А так, зацените видео которое прикрепил, очень интересное.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ax7f3JZJHSw?si=HIwEXzuWNCwyX2Ph" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </article>
+        <article class="main-hobby">
+            <div class="main-hobby-header">
+                <div class="main-hobby-header-light one"></div>
+                <div class="main-hobby-header-light two"></div>
+                <div class="main-hobby-header-light three"></div>
+                <h1 class="main-hobby-header-text">Йога</h1>
+            </div>
+            <div class="main-hobby-contents">
+                <p class="main-hobby-contents-text">Йогой заставлял заниматься отец. Он еще заставил участвовать в кружке по актерству, балете, кудо и так далее. Но все это не зашло и прожило лишь неделю или две, а вот йога зашла. Видео просто нашел рандомное, все равно зацените.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4JZCt9Ex-ow?si=mLYLpfHR-CpuOMD_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </article>
+        <article class="main-hobby">
+            <div class="main-hobby-header">
+                <div class="main-hobby-header-light one"></div>
+                <div class="main-hobby-header-light two"></div>
+                <div class="main-hobby-header-light three"></div>
+                <h1 class="main-hobby-header-text">Труба</h1>
+            </div>
+            <div class="main-hobby-contents">
+                <p class="main-hobby-contents-text">На это потратил как минимум 6 лет своей жизни. Все еще умею играть, хотя практики давно не было. Самый красивый иструмент, но в вокзал играть не пускают. Прикрепил ютуб видео где можно играть с помощью цифр на клавиатуре, попробуйте!</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/47ZXpBjizto?si=rfZyF3Gu_rcqo8_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </article>
+        <article class="main-hobby">
+            <div class="main-hobby-header">
+                <div class="main-hobby-header-light one"></div>
+                <div class="main-hobby-header-light two"></div>
+                <div class="main-hobby-header-light three"></div>
+                <h1 class="main-hobby-header-text">Чтение</h1>
+            </div>
+            <div class="main-hobby-contents">
+                <p class="main-hobby-contents-text">Читал про человека-амфибию, про убийства и наказания, про забытые острова, Стэлярисы и законы робототехники. Весело, короче. И воображение из-за этого отличное. Аудиокнига для тех, у кого времени много!</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bvMA-9XLqTw?si=8OmHjBkgHHgfauCN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </article>
+    </main>
+    <footer class="footer">
+        <ul class="footer-contacts">
+            <li class="footer-contacts-item">Махария Михаил</li>
+            <li class="footer-contacts-item">+79312932249</li>
+            <li class="footer-contacts-item">mmikhail602@gmail.com</li>
+        </ul>
+    </footer>
 </body>
 </html>
